# fmql

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish-core.yml  publish-semantic.yml  publish.yml
docs/: design.md  design_doc.md  fmql-semantic.md  fmql_semantic.md  implementation_plan.md  monorepo.md  plugins.md  plugins_arch.md
src/fm/: __init__.py  aggregation.py  dates.py  describe.py  edits.py  errors.py  filters.py  parser.py  resolvers.py  traversal.py  types.py
src/fm/cli/: _coerce.py  cmd_cypher.py  cmd_describe.py  cmd_query.py  cmd_set.py  cmd_toggle.py
src/fm/contrib/: semantic.py  sqlite.py
src/fm/cypher/: ast.py
src/fmq/: __init__.py  aggregation.py  dates.py  describe.py  edits.py  errors.py  filters.py  packet.py  parser.py  query.py  resolvers.py  search.py  traversal.py  types.py  workspace.py
src/fmq/cli/: __init__.py  _edit_common.py  cmd_append.py  cmd_cypher.py  cmd_describe.py  cmd_query.py  cmd_remove.py  cmd_rename.py  cmd_set.py  cmd_toggle.py  main.py  stdin.py
src/fmq/contrib/: __init__.py  (+2 more)
src/fmql/: __init__.py  aggregation.py  errors.py  filters.py  packet.py  query.py  search.py  traversal.py  types.py  workspace.py
tests/: conftest.py  test_aggregation.py  test_cypher.py  test_dates.py  test_describe.py  test_edits_ops.py  test_edits_plan.py  test_edits_roundtrip.py  test_filters.py  test_parser.py  test_parser_serialize.py  test_qlang.py  test_query.py  test_resolvers.py  test_search.py  test_traversal.py  test_workspace.py
tests/cli/: test_cypher_cmd.py  test_describe_cmd.py  test_edit_cmds.py  test_index_cmd.py  test_query_cmd.py  test_search_cmd.py
tests/search/: test_grep_conformance.py
(+29 files in other folders)
